# claude-fleet

./: .gitignore  README.md  pyproject.toml
src/claude_fleet/: __init__.py  cli.py  common.py  hook.py  install.py  remote.py  widget.py
