[project]
name = "claude-fleet"
version = "0.1.0"
description = "Always-on-top widget showing a live LED status for every Claude Code session."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []  # Tkinter ships with CPython; zero third-party deps.

[project.scripts]
claude-fleet = "claude_fleet.widget:main"
claude-fleet-hook = "claude_fleet.hook:main"
claude-fleet-install = "claude_fleet.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_fleet"]
