[project]
name = "claude-fleet"
version = "0.2.8"
description = "Always-on-top widget showing a live LED status for every Claude Code session, across machines."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42",  # Fernet E2E encryption for cross-machine sync
]

[project.scripts]
claude-fleet = "claude_fleet.cli:main"
claude-fleet-hook = "claude_fleet.hook:main"
claude-fleet-install = "claude_fleet.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_fleet"]
